--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,12 @@
 
     <!-- the office quotes: -->
     <string name="quote1">“Sometimes I’ll start a sentence and I don’t even know where it’s going. I just hope I find it along the way.” – Michael Scott</string>
-    <string name="quote2">“I talk a lot, so I’ve learned to tune myself out.” – Kelly Kapoor,</string>
+    <string name="quote2">“I talk a lot, so I’ve learned to tune myself out.” – Kelly Kapoor</string>
     <string name="quote3">“Would I rather be feared or loved? Easy. Both. I want people to be afraid of how much they love me.” – Michael Scott</string>
     <string name="quote4">“I’m not superstitious, but I am a little stitious.” – Michael Scott</string>
     <string name="quote5">“If I don’t have some cake soon, I might die.” – Stanley Hudson</string>
     <string name="quote6">“The worst thing about prison was the dementors.” – Michael “Prison Mike” Scott</string>
-    <string name="quote7">“No, Rose, they are not breathing. And they have no arms or legs … Where are they? You know what? If we come across somebody with no arms or legs, do we bother resuscitating them? I mean, what quality of life do we have there?” – Michael Scott,</string>
+    <string name="quote7">“No, Rose, they are not breathing. And they have no arms or legs … Where are they? You know what? If we come across somebody with no arms or legs, do we bother resuscitating them? I mean, what quality of life do we have there?” – Michael Scott</string>
     <string name="quote8">“Identity theft is not a joke, Jim! Millions of families suffer every year.” – Dwight Schrute</string>
     <string name="quote9">“Today, smoking is going to save lives.” – Dwight Schrute</string>
     <string name="quote10">“I am running away from my responsibilities. And it feels good.” – Michael Scott</string>
